--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,14 +1,102 @@
+<!DOCTYPE html>
 <html lang="en">
-  <body>
-    <h1>Job Tracker Extension</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Application Tracker</title>
+    <link rel="stylesheet" href="popup.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="header-icon">
+                <img src="C:\Users\blais\OneDrive\Documents\GitHub\job-tracker-chrome-extension\images\16x16.png" alt="Job Application Tracker Icon">
+        </div>
+        <h1>Job Application Tracker</h1>
+    </div>
+
+    <form id="jobForm" class="form">
+        <div class="form-group">
+            <label for="company">Company Name</label>
+            <input type="text" id="company" name="company" required>
+        </div>
+
+         <div class="form-group">
+            <label for="position">Position</label>
+            <input type="text" id="position" name="position" required>
+        </div>
+
+         <div class="form-group">
+            <label for="applicationDate">Application Date</label>
+            <input type="date" id="applicationDate" name="applicationDate" required>
+        </div>
+
+         <div class="form-group">
+            <label for="status">Status</label>
+            <select id="status" name="status">
+                <option value="In Review" selected>In Review</option> <!--Defaulted to In Review-->
+                <option value="Interviewing">Interviewing</option>
+                <option value="Offer">Offer</option>
+                <option value="Rejected">Rejected</option>
+                <option value="Accepted Offer">Accepted Offer</option>
+                <option value="Ghosted">Ghosted</option>
+            </select>
+        </div>
+
+         <div class="form-group">
+            <label for="appliedWhere">Applied Where?</label>
+            <select id="appliedWhere" name="appliedWhere">
+                <option value="LinkedIn">LinkedIn</option>
+                <option value="Indeed">Indeed</option>
+                <option value="Glassdoor">Glassdoor</option>
+                <option value="Company Website">Company Website</option>
+                <option value="Other">Other</option>
+                <option value="Jobright.AI">Jobright.AI</option>
+            </select>
+        </div>
+
+         <div class="form-group">
+            <label for="referall">Got Referall?</label>
+             <select id="referall" name="referall">
+                <option value="No">No</option>
+                <option value="Yes">Yes</option>
+             </select>
+        </div>
+
+         <div class="form-group" id="referallContactGroup" style="display: none;">
+            <label for="referralContact">Referall Contact Name</label>
+            <input type="text" id="referallContact" name="referallContact">
+        </div>
+
+        <div class="button-group">
+            <button type="submit" class="btn-primary" id="submitBtn">
+                <span class="btn-text">Add to Sheet</span>
+                <div class="spinner" id="spinner"></div>
+            </button>
+            <button type="button" class="btn-secondary" id="settingsBtn">Settings</button>
+        </div>
+    </form>
+
+    <div class="settings-panel" id="settingsPanel" style="display: none;">
+        <h3>Settings</h3>
+        <div class="form-group">
+            <label for="sheetURL"> Google Apps Script URL</label>
+            <input type="url" id="sheetURL" placeholder="https://script.google.com/macros/s/...">
+            <small>Enter your Google Apps Script deployment URL</small>
+        </div>
+        <div class="button-group">
+            <button type="button" class="btn-primary" id="saveSettings">Save Settings</button>
+            <button type="button" class="btn-secondary" id="cancelSettings">Cancel</button>
+        </div>
+    </div>
+
+    <div class="status-message" id="statusMessage"></div>
+
+    <div class="footer">
+        <small>Make sure to set up the Google Apps Script first!</small>
+    </div>
+
     <script src="popup.js"></script>
-    <p>Welcome to the Job Tracker Extension!</p>
-    <p>This extension helps you track job applications 
-        by automatically saving your job application details
-        from the job listing page to a Google Sheet.</p>
-    <p>To use this extension, please follow these steps:</p>
-    </p>
-    <p>Click the button below to get started:</p>
-    <button id="startButton">Start Tracking</button>
-  </body>
+
+</body>
 </html>
